--- a/package.json
+++ b/package.json
@@ -69,8 +69,8 @@
     "babel-preset-env": "0.0.9",
     "babel-preset-latest": "6.16.0",
     "babel-preset-react": "6.16.0",
+    "chalk": "^1.1.3",
     "chokidar": "1.6.1",
-    "colors": "1.1.2",
     "css-loader": "0.26.0",
     "dotenv": "2.0.0",
     "eslint": "3.11.1",
